--- a/FRONT/src/app/entrepot/entrepot.html
+++ b/FRONT/src/app/entrepot/entrepot.html
@@ -1,4 +1,8 @@
 <div class="pageMain admin-scroll">
+  <div class="notification-banner" *ngIf="showNotificationBanner">
+    <span class="material-symbols-outlined notranslate">check_circle</span>
+    <span>{{ notificationMessage }}</span>
+  </div>
   <div class="content">
     <!-- HEADER -->
     <div class="page-head">
