sensation de fluidité totale tout en ayant la garantie que les données sont fraîches à chaque clic sur une catégorie.

--- a/FRONT/src/app/entrepot/entrepot.html
+++ b/FRONT/src/app/entrepot/entrepot.html
@@ -191,7 +191,7 @@
                 Aucun camion trouvé pour ce statut.
               </td>
             </tr>
-            <tr *ngFor="let t of filteredTrucks" class="row-hover">
+            <tr *ngFor="let t of filteredTrucks; trackBy: trackById" class="row-hover">
               <td>
                 <div class="plate-number">
                   {{ t.immatriculation }}
