--- a/FRONT/src/app/dashboard-main/dashboard-main.html
+++ b/FRONT/src/app/dashboard-main/dashboard-main.html
@@ -12,7 +12,7 @@
 
             <button class="btn btn-primary" type="button" (click)="openWarehouseModal()">
               <span class="material-symbols-outlined notranslate">add</span>
-              <span>Nouvel enregistrement</span>
+              <span>Nouvel Entrepôt</span>
             </button>
           </div>
 
