--- a/FRONT/src/app/entrepot/entrepot.scss
+++ b/FRONT/src/app/entrepot/entrepot.scss
@@ -18,8 +18,7 @@
 
 .content {
   /* Matching logic of .page-container from user-entrepot */
-  max-width: 1400px;
-  margin: 0 auto;
+  width: 100%;
   padding: 2rem;
   display: flex;
   flex-direction: column;
