responssive petit écran

--- a/FRONT/src/app/user-entrepot/user-entrepot.html
+++ b/FRONT/src/app/user-entrepot/user-entrepot.html
@@ -1,5 +1,5 @@
 <div class="page-container">
-    <div class="notification-banner" *ngIf="showNotificationBanner">
+    <div class="notification-banner" *ngIf="showNotificationBanner"></div>
         <span class="material-symbols-outlined notranslate">check_circle</span>
         <span>{{ notificationMessage }}</span>
     </div>
@@ -218,8 +218,6 @@
                 </table>
             </div>
         </div>
-
-    </div>
 
 <!-- ================= MODALES ================= -->
 
